# electoral-console

./: .current_results.json.swp  .gitignore  README.md  app.py  assemble.py  chat_history.txt  current_results.json  electoral_map.json  generate_scraper_prompt.py  hello.py  loop_scrapers.sh  main.py  pyproject.toml  requirements.txt  run_scrapers.sh  setup_scrapers.py  update_scrapers.py  update_scrapers_print.py
scrapers/Alabama/: latest.json  scraper.py
scrapers/Alaska/: latest.json  scraper.py
scrapers/Arizona/: latest.json  scraper.py
scrapers/Arkansas/: latest.json  scraper.py
scrapers/California/: latest.json  scraper.py
scrapers/Colorado/: latest.json  scraper.py
scrapers/Connecticut/: latest.json  scraper.py
scrapers/Delaware/: latest.json  scraper.py
scrapers/District_of_Columbia/: latest.json  scraper.py
scrapers/Florida/: latest.json  scraper.py
scrapers/Georgia/: latest.json  scraper.py
scrapers/Hawaii/: scraper.py
scrapers/Idaho/: latest.json  scraper.py
scrapers/Illinois/: latest.json  scraper.py
scrapers/Indiana/: latest.json  scraper.py
scrapers/Iowa/: latest.json  scraper.py
scrapers/Kansas/: latest.json  scraper.py
scrapers/Kentucky/: latest.json  scraper.py
scrapers/Louisiana/: latest.json  scraper.py
scrapers/Maine/: latest.json  scraper.py
scrapers/Maryland/: latest.json  scraper.py
scrapers/Massachusetts/: latest.json  scraper.py
scrapers/Michigan/: latest.json  scraper.py
scrapers/Minnesota/: latest.json  scraper.py
scrapers/Mississippi/: latest.json  scraper.py
scrapers/Missouri/: latest.json  (+1 more)
(+51 files in other folders)
