[project]
name = "electoral-console"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "requests>=2.32.3",
    "textual>=0.85.2",
]
